Fixing header & footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@
   /*Logo in Navigation */
   .navbar-brand {
     padding: 0px;
-    background-color: white; /* Remove this when the brand logo's padding is fixed*/
+    background-color: #8C1B16; /* Still need to fix the brand logo's padding*/
   }
   
   /*Navigation List */
